--- a/.babelrc
+++ b/.babelrc
@@ -4,6 +4,9 @@
         "@babel/env"
     ],
     "plugins": [
-        "react-hot-loader/babel"
+        "react-hot-loader/babel",
+        ["@babel/plugin-proposal-decorators", {
+            "decoratorsBeforeExport": true
+        }]
     ]
 }
