--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     },
     "devDependencies": {
         "@babel/core": "^7.3.4",
+        "@babel/plugin-proposal-decorators": "^7.4.0",
         "@babel/preset-env": "^7.3.4",
         "@babel/preset-react": "^7.0.0",
         "babel": "^6.23.0",
