--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "file-loader": "^3.0.1",
         "friendly-errors-webpack-plugin": "^1.7.0",
         "html-webpack-plugin": "^3.2.0",
+        "husky": "^1.3.1",
         "style-loader": "^0.23.1",
         "webpack": "^4.29.6",
         "webpack-cli": "^3.3.0",
@@ -32,5 +33,9 @@
         "start": "webpack-dev-server --inline --progress --config webpack.config.dev.js",
         "lint": "eslint src"
     },
-    "pre-commit": "yarn lint"
+    "husky": {
+        "hooks": {
+            "pre-commit": "eslint src"
+        }
+    }
 }
