--- a/.babelrc
+++ b/.babelrc
@@ -7,6 +7,7 @@
         "react-hot-loader/babel",
         ["@babel/plugin-proposal-decorators", {
             "decoratorsBeforeExport": true
-        }]
+        }],
+        "@babel/plugin-syntax-dynamic-import"
     ]
 }
