--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "devDependencies": {
         "@babel/core": "^7.3.4",
         "@babel/plugin-proposal-decorators": "^7.4.0",
+        "@babel/plugin-syntax-dynamic-import": "^7.2.0",
         "@babel/preset-env": "^7.3.4",
         "@babel/preset-react": "^7.0.0",
         "babel": "^6.23.0",
@@ -35,7 +36,7 @@
     },
     "husky": {
         "hooks": {
-            "pre-commit": "eslint src"
+            "pre-commit": "eslint src/**"
         }
     }
 }
